--- a/src/public/css/appointment.css
+++ b/src/public/css/appointment.css
@@ -42,7 +42,7 @@ a:hover {
 }
 
 .heading {
-  font-size:3rem;
+  font-size: 3rem;
   font-weight: 900;
 }
 
@@ -53,6 +53,9 @@ a:hover {
   padding-right: 0;
   border-radius: 0;
   background: none;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 .form-control:active,
 .form-control:focus {
@@ -64,7 +67,7 @@ a:hover {
 
 .col-form-label {
   color: #000;
-  font-size: 1rem;
+  font-size: 2rem;
 }
 
 .btn,
@@ -104,7 +107,7 @@ a:hover {
 }
 
 .contact-wrap .col-form-label {
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: #b3b3b3;
   margin: 0 0 10px 0;
   display: inline-block;
@@ -113,7 +116,7 @@ a:hover {
 
 .contact-wrap .form,
 .contact-wrap .contact-info {
-  padding: 40px;
+  padding: 30px;
 }
 
 .contact-wrap .contact-info {
@@ -124,18 +127,20 @@ a:hover {
   color: rgba(255, 255, 255, 0.5);
 }
 .contact-wrap .contact-info ul li .wrap-icon {
-  font-size:2 rem;
+  font-size: 2 rem;
   color: #fff;
   margin-top: 5px;
 }
 
 .contact-wrap .form {
   background: #fff;
+  height: 50rem;
 }
 .contact-wrap .form h3 {
   color: #35477d;
-  font-size:2rem;
+  font-size: 3rem;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .contact-wrap .contact-info {
@@ -160,38 +165,4 @@ a:hover {
   color: #fff;
   font-size: 2rem;
   margin-bottom: 30px;
-}
-
-label.error {
-  font-size: 2rem;
-  color: red;
-}
-
-#message {
-  resize: vertical;
-}
-
-#form-message-warning,
-#form-message-success {
-  display: none;
-}
-
-#form-message-warning {
-  color: #b90b0b;
-}
-
-#form-message-success {
-  color: #55a44e;
-  font-size: 1rem;
-  font-weight: bold;
-}
-
-.submitting {
-  float: left;
-  width: 100%;
-  padding: 10px 0;
-  display: none;
-  font-weight: bold;
-  font-size: 1rem;
-  color: #000;
 }
