--- a/src/views/campaign.ejs
+++ b/src/views/campaign.ejs
@@ -94,9 +94,13 @@
                       src="https://bootdey.com/img/Content/avatar/avatar7.png"
                     />
                   </span>
+                  <% if(event.length > 0){ %>
+                    <% for(var i = 0;i < 1; i++){ %>
                   <div class="media-body ml-2 d-none d-lg-block">
-                    <span class="mb-0 text-sm font-weight-bold">Admin</span>
+                    <span class="mb-0 text-sm font-weight-bold"><%- event[i].bdname %></span>
                   </div>
+                  <% } %>
+                  <% } %>
                 </div>
               </a>
             </li>
@@ -119,11 +123,12 @@
         <div class="container-fluid align-items-center">
           <div class="row">
             <div class="col-lg-7 col-md-10">
-              <h1 class="display-2 text-white">Hello Jesse</h1>
-              <p class="text-white mt-0 mb-5">
-                This is your profile page. You can see the progress youve made
-                with your work and manage your projects or assigned tasks
-              </p>
+              <% if(event.length > 0){ %>
+                <% for(var i = 0;i < 1; i++){ %>
+              <h1 class="display-2 text-white">Hello <%- event[i].bdname %></h1>
+              <% } %>
+              <% } %>
+              <br>
             </div>
           </div>
         </div>
@@ -167,8 +172,10 @@
                       ></div>
                     </div>
                   </div>
+                  <% if(event.length > 0){ %>
+                    <% for(var i = 0;i < 1; i++){ %>
                   <div class="text-center">
-                    <h3>Admin<span class="font-weight-light"> Cute</span></h3>
+                    <h3><%- event[i].bdname %><span class="font-weight-light"> Cute</span></h3>
                     <div class="h5 mt-4">
                       <i class="ni business_briefcase-24 mr-2"></i>Solution
                       Manager - Creative Tim Officer
@@ -180,6 +187,8 @@
                   <p>Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music.</p>
                   <a href="#">Show more</a> -->
                   </div>
+                  <% } %>  
+                  <% } %>  
                 </div>
               </div>
             </div>
