--- a/src/views/home_hospital.ejs
+++ b/src/views/home_hospital.ejs
@@ -99,128 +99,126 @@
                 </div>
             </div>
         </section>
+        <br>
         <div class="parallax__skill">
-         <section class="section-skills">
-             <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                        <div class="skill-box">
-                            <i class=" skill-box__icon fas fa-globe-americas"></i>
-                            <h3 class="heading-tertiary u-margin-bottom-small">global skill</h3>
-                            <div class="skill-box__text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
-                                doloribus corporis debitis soluta atque.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                        <div class="skill-box">
-                            <i class=" skill-box__icon fas fa-book-open"></i>
-                            <h3 class="heading-tertiary u-margin-bottom-small">google's knowledge</h3>
-                            <div class="skill-box__text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
-                                doloribus corporis debitis soluta atque.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                        <div class="skill-box">
-                            <i class=" skill-box__icon fas fa-users"></i>
-                            <h3 class="heading-tertiary u-margin-bottom-small">leader of your life</h3>
-                            <div class="skill-box__text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
-                                doloribus corporis debitis soluta atque.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                        <div class="skill-box">
-                            <i class=" skill-box__icon fas fa-hourglass-half"></i>
-                            <h3 class="heading-tertiary u-margin-bottom-small">saving your time</h3>
-                            <div class="skill-box__text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
-                                doloribus corporis debitis soluta atque.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        </div>
-        <section class="section-sales">
+        <section class="section-skills">
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                    <div class="img-sales">
-                        <img src="./img/img-sales.png" alt="photo-sales" class="img-sales__photo img-sales__photo--1">
-                    </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                        <h3 class="heading-tertiary u-margin-bottom-small">FEATURE LIST</h3>
-                        <h3 class="heading-tertiary u-margin-bottom-big">Performance Graph </h3>
-                        <h3 class="heading-tertiary u-margin-bottom-big-pu">UX DesignT </h3>
-                    
-                    <div class="section-sales-list--1">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-4 col-sm-3 col-md-3 col-lg-3 col-xl-3">
-                                    <div class="img-sales--bg">
-                                        <img src="./img/logo-sales-1.png" alt="photo-sales" class="img-sales__photo--2">
-                                    </div>
-                                </div>
-                                <div class="col-8 col-sm-9 col-md-9 col-lg-9 col-xl-9">
-                                    <h3>Get a Free App Trial</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="section-sales-list--2">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-4 col-sm-3 col-md-3 col-lg-3 col-xl-3">
-                                    <div class="img-sales--bg">
-                                        <img src="./img/logo-sales-2.png" alt="photo-sales" class="img-sales__photo--3">
-                                    </div>
-                                </div>
-                                <div class="col-8 col-sm-9 col-md-9 col-lg-9 col-xl-9">
-                                    <h3>Get a Free App Trial</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="section-number">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-                        <div class="section-number--details">
-                            <h3><span class="counter">500</span></h3>
-                            <h4>Faster More then Older</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-                        <div class="section-number--details">
-                            <h3><span class="counter">95</span>%</h3>
-                            <h4>Faster More then Older</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-                        <div class="section-number--details">
-                            <h3><span class="counter">5</span></h3>
-                            <h4>Faster More then Older</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+               <div class="row">
+                   <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                       <div class="skill-box">
+                           <i class=" skill-box__icon fas fa-globe-americas"></i>
+                           <h3 class="heading-tertiary u-margin-bottom-small">global </h3>
+                           <div class="skill-box__text">
+                               Our organization has many branches and partners across the country, which can easily supply blood to hospitals immediately.
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                       <div class="skill-box">
+                           <i class=" skill-box__icon fas fa-book-open"></i>
+                           <h3 class="heading-tertiary u-margin-bottom-small">knowledge</h3>
+                           <div class="skill-box__text">
+                               Come to us, you will get a health check and ask yourself the necessary information before you donate blood
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                       <div class="skill-box">
+                           <i class=" skill-box__icon fas fa-users"></i>
+                           <h3 class="heading-tertiary u-margin-bottom-small">Manager</h3>
+                           <div class="skill-box__text">
+                               You easily manage personal information, blood donation history. With the hospital, they can easily order blood and manage the information of the blood bags they have ordered
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                       <div class="skill-box">
+                           <i class=" skill-box__icon fas fa-hourglass-half"></i>
+                           <h3 class="heading-tertiary u-margin-bottom-small">saving your time</h3>
+                           <div class="skill-box__text">
+                               With the motto that time is gold, we value time because a minute delay can take a life
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </section>
+       </div>
+       <br>
+       <section class="section-sales">
+           <div class="container">
+               <div class="row">
+                   <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                   <div class="img-sales">
+                       <img src="./img/img-sales.png" alt="photo-sales" class="img-sales__photo img-sales__photo--1">
+                   </div>
+                   </div>
+                   <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                       <h3 class="heading-tertiary u-margin-bottom-small">PROMPTLY</h3>
+                       <h3 class="heading-tertiary u-margin-bottom-big">SAFE</h3>
+                       <h3 class="heading-tertiary u-margin-bottom-big-pu">CONVENIENT </h3>
+                   
+                   <div class="section-sales-list--1">
+                       <div class="container">
+                           <div class="row">
+                               <div class="col-4 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+                                   <div class="img-sales--bg">
+                                       <img src="./img/logo-sales-1.png" alt="photo-sales" class="img-sales__photo--2">
+                                   </div>
+                               </div>
+                               <div class="col-8 col-sm-9 col-md-9 col-lg-9 col-xl-9">
+                                   <h3>Use on multiple device platforms</h3>
+                                   <p>You can use it on your laptop, phone, tablet,... other devices, as long as they have an internet connection</p>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="section-sales-list--2">
+                       <div class="container">
+                           <div class="row">
+                               <div class="col-4 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+                                   <div class="img-sales--bg">
+                                       <img src="./img/logo-sales-2.png" alt="photo-sales" class="img-sales__photo--3">
+                                   </div>
+                               </div>
+                               <div class="col-8 col-sm-9 col-md-9 col-lg-9 col-xl-9">
+                                   <h3>Easily manage information</h3>
+                                   <p>You can easily manage blood donation information, find blood sources.</p>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+                   </div>
+               </div>
+           </div>
+       </section>
+       <section class="section-number">
+           <div class="container">
+               <div class="row">
+                   <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+                       <div class="section-number--details">
+                           <h3><span class="counter">500</span>+</h3>
+                           <h4>Partners from hospitals</h4>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                       </div>
+                   </div>
+                   <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+                       <div class="section-number--details">
+                           <h3><span class="counter">95</span>%</h3>
+                           <h4>Blood to the right place</h4>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                       </div>
+                   </div>
+                   <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+                       <div class="section-number--details">
+                           <h3><span class="counter">10</span>+</h3>
+                           <h4>Blood donation event organizer</h4>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </section>
 <br>
         <div class="parallax__slide">
             <section class="section-slide">
@@ -243,7 +241,7 @@
                             <div class="slideshow-container">
                                 <!-- Full-width images with number and caption text -->
                                 <% if(event.length > 0){ %>
-                                    <% for(var i = 0;i < event.length; i++){ %>
+                                    <% for(var i = event.length; i--;){ %>
                                 <div class="mySlides fade">
                                     <div class="container">
                                         <div class="row">
