--- a/src/views/addBlood.ejs
+++ b/src/views/addBlood.ejs
@@ -545,7 +545,7 @@
 
               div.innerHTML +=
                 "<div class='row' id='row'><div class='col-lg-6'><div class='form-group'><label class='form-control-label' for='input-username'>Name</label><input type='text' id='input-username' class='form-control form-control-alternative' disabled value=" +
-                obj[i]["dname"] +
+                obj[i]["name"] +
                 " ></div></div><div class='col-lg-6'><div class='form-group'><label class='form-control-label' for='input-ssn'>SSN</label><input type='text' id='input-ssn' class='form-control form-control-alternative' value=" +
                 obj[i]["ssn"] +
                 " disabled></div> </div> </div>";
@@ -554,7 +554,7 @@
                 "<div class='row' id='row'><div class='col-lg-6'><div class='form-group'><label class='form-control-label' for='input-gender'>Gender</label><input type='text' id='input-gender' class='form-control form-control-alternative' disabled value=" +
                 obj[i]["gender"] +
                 " ></div></div><div class='col-lg-6'><div class='form-group'><label class='form-control-label' for='input-dob'>Birdays</label><input type='text' id='input-dob' class='form-control form-control-alternative' value=" +
-                obj[i]["dob"] +
+                obj[i]["birthday"] +
                 " disabled></div> </div> </div>";
 
               div.innerHTML +=
