--- a/src/views/updateDonor.ejs
+++ b/src/views/updateDonor.ejs
@@ -109,7 +109,7 @@
                               id="username"
                               name="username"
                               class="form-control form-control-alternative"
-                              value="<%- fill[i].dname %>"
+                              value="<%- fill[i].name %>"
                             />
                           </div>
                         </div>
