--- a/src/views/information.ejs
+++ b/src/views/information.ejs
@@ -98,7 +98,7 @@
                     />
                   </span>
                   <div class="media-body ml-2 d-none d-lg-block">
-                    <span class="mb-0 text-sm font-weight-bold"><%- info[i].dname %></span>
+                    <span class="mb-0 text-sm font-weight-bold"><%- info[i].name %></span>
                   </div>
                 </div>
                 <% } %>
@@ -129,7 +129,7 @@
           <div class="container-fluid align-items-center">
             <div class="row">
               <div class="col-lg-12 col-md-12">
-                <h1 class="display-2 text-white">Hello <%- info[i].dname %></h1>
+                <h1 class="display-2 text-white">Hello <%- info[i].name %></h1>
                 <h6 class="text-white mt-0 mb-5">
                   This is your profile page. You can view your personal information and blood donation history and you can see if your blood has been ordered by the hospital
                 </h6>
@@ -164,7 +164,7 @@
                       <div class="mt-3">
                         <br />
                         <br />
-                        <h4>&nbsp;&nbsp;&nbsp;<%- info[i].dname %></h4>
+                        <h4>&nbsp;&nbsp;&nbsp;<%- info[i].name %></h4>
                         <br />
                       
                         <a href="/donor/information/avatar" class="btn btn-primary">Change Avatar</a>
@@ -197,7 +197,7 @@
                       <div class="col-sm-3">
                         <h6 class="mb-0">Full Name</h6>
                       </div>
-                      <div class="col-sm-9 text-secondary"><%- info[i].dname %></td>
+                      <div class="col-sm-9 text-secondary"><%- info[i].name %></td>
                        </div>
                     </div>
                     <hr />
@@ -214,7 +214,7 @@
                       <div class="col-sm-3">
                         <h6 class="mb-0">Birdays</h6>
                       </div>
-                      <div class="col-sm-9 text-secondary">  <%- info[i].dob %>
+                      <div class="col-sm-9 text-secondary">  <%- info[i].birthday %>
                        </div>
                     </div>
                     <hr />
