--- a/src/views/pass_forgot.ejs
+++ b/src/views/pass_forgot.ejs
@@ -33,7 +33,7 @@
     <div class="limiter">
       <div class="container-login100">
         <div class="wrap-passfg">
-          <form class="login100-form" method="post" >
+          <form class="login100-form" method="post">
             <span class="login100-form-title p-b-56"
               >Forgot Your Password?</span
             >
@@ -60,6 +60,10 @@
               </div>
             </div>
           </form>
+          <!-- Return to Login -->
+          <div class="text-center">
+            <a href="./login.html" class="returnlogin">Return to Login</a>
+          </div>
         </div>
       </div>
     </div>
